@@ -745,6 +745,13 @@ sub _process_perf_info_page {
         }
     }
 
+    # add logfile cache statistics
+    $c->stash->{'has_lmd'} = 0;
+    if($c->config->{'use_lmd_core'}) {
+        $c->stash->{'has_lmd'}   = 1;
+        $c->stash->{'lmd_stats'} = $c->{'db'}->lmd_stats($c);
+    }
+
     return 1;
 }
 
